--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1 class="header">Yeadam Bloggin</h1>
+  <h1 class="header">Yeadam's Blog</h>
   <main class="section-container">
     <section class="blog">
       <h2>Blog Posts</h2>
