--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1 class="header">Yeadam's Blog</h>
+  <h1 class="header">Yeadam's Blog</h1>
   <main class="section-container">
     <section class="blog">
       <h2>Blog Posts</h2>
@@ -15,13 +15,16 @@
     </section>
     <section class="about">
       <h2>About Me</h2>
-      <p>Hi, my name is Yeadam.</p>
+      <div class="profile-container">
+        <img src="./mushmom.JPG" alt="profile picture">
+      </div>
+      <p>Hi, my name is Yeadam. I'm a third-year Mathematics of Computation major at UCLA. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto recusandae iure voluptatem nobis incidunt, qui aliquam aut placeat velit laborum consequatur veniam animi itaque sed corporis laudantium quaerat asperiores aperiam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, itaque fugiat eligendi tenetur dignissimos quisquam reiciendis, voluptatum minus, soluta eveniet expedita porro ducimus nam ea quidem quae sed temporibus. Doloribus!</p>
     </section>
     <section class="contact">
       <h2>Contacts</h2>
-      <p>N/A</p>
+      <p>Don't Contact Me</p>
     </section >
   </main>
-  <footer> © 2024 Yeadam Kim</footer>
+  <footer><span>© 2024 Yeadam Kim</span></footer>
 </body>
 </html>
